# invoice_image_collector

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  config.py  main.py
app/api/: autofocus.py  cameras.py  capture.py  controls.py  events.py  images.py  stream.py
app/camera/: controller.py  discovery.py  errors.py  events.py  frame_source.py  models.py  registry.py
app/camera/backends/: __init__.py  v4l2.py  wgwk.py
app/capture/: autofocus.py  encoder.py  focus_stabilizer.py  service.py
app/core/: events.py
app/storage/: bundler.py  naming.py  repository.py  thumbnail.py
app/stream/: base.py  coordinator.py  errors.py  mjpeg.py
app/web/: templates.py
app/web/static/css/: style.css
app/web/static/js/: camera.js  gallery.js  index.js
app/web/templates/: camera.html  gallery.html  index.html
script/: iic.service  run.sh  setup.sh  setup_arducam_udev.sh
