[project]
name = "invoice_image_collector"
version = "0.1.0"
description = "Web-based USB camera image collector with capture, focus control, and ZIP export"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pyudev>=0.24",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
